[package]
name = "endless_utopia"
version = "0.1.0"
edition = "2021"
authors = ["EndlessUtopia Contributors"]
description = "A coordinate-based infinite ASCII world generator"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies for deterministic world generation
# No external dependencies needed - using only std for lightweight WASM

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "Window",
    "Document",
    "Element",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "EventTarget",
    "Event",
    "console",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[dev-dependencies]

[profile.release]
opt-level = "z"     # Optimize for size for WASM
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
